--- a/index.html
+++ b/index.html
@@ -1,87 +1,87 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>Boostrap Starter Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-  </head>
+	
+	<title>Module 3 Solution</title>
+</head>
 <body>
+    <header class="nav-header">
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <p class="nav-brand">Food, LLC</p>
+          </div>
 
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Food, LLC</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="navbar-menu">
-        <ul class="nav navbar-nav visible-xs">
-          <li><a href="#chicken" class="text-center">Chicken <span class="sr-only">(current)</span></a></li>
-          <li><a href="#beef" class="text-center">Beef</a></li>
-          <li><a href="#sushi" class="text-center">Sushi</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-
-  <h2 class="text-center">Our Menu</h2>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="section">
-          <h3 class="text-center" id="chicken">Chicken</h3>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li class="text-center">
+              <a href="#chicken-div"><p class="item">Chicken</p></a>
+              <hr class="visible-xs">
+            </li>            
+            <li class="text-center beef-item">
+              <a href="#beef-div"><p class="item">Beef</p></a>
+              <hr class="visible-xs">
+            </li>
+            <li class="text-center sushi-item">
+              <a href="#sushi-div"><p class="item">Sushi</p></a>
+            </li>
+          </ul> 
         </div>
       </div>
-      <div class="col-xs-12">
-        <div class="section">
-          <h3 class="text-center" id="beef">Beef</h3>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-        </div>
-      </div>
-      <div class="col-xs-12">
-        <div class="section">
-          <h3 class="text-center" id="sushi">Sushi</h3>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in ullamcorper erat. Vivamus tempor metus orci, non placerat est interdum non. Integer neque orci, finibus nec arcu et, vestibulum luctus urna. Suspendisse potenti. Sed maximus molestie mi ac sodales. Morbi egestas velit eget vehicula pharetra. Maecenas feugiat mi vel eros vulputate, et ornare tortor bibendum. Nam accumsan ligula ipsum, a interdum dolor pretium a. Duis a tellus nec lacus tempor mollis. Donec et magna vitae lorem ultrices euismod.
-        </div>
-      </div>
-    </div>
-  </div>
+    </nav>
+  	</header>
 
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+	<h1 class="text-center">Our Menu</h1>
+
+	<div class="row container container-fluid">
+	<div class="col-md-12 col-sm-12 col-xs-12" id="chicken-div">
+		<section>
+		<div id="chicken">
+			Chicken
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
+		</p>
+		</section>
+	</div>
+	<div class="col-md-12 col-sm-12 col-xs-12" id="beef-div">
+		<section>
+		<div id="beef">
+			Beef
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
+		</p>
+		</section>
+	</div>
+	<div class="col-md-12 col-sm-12 col-xs-12" id="sushi-div">
+		<section>
+		<div id="sushi">
+			Sushi
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
+		</p>
+		</section>
+	</div>
+	</div>
+
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/script.js"></script>
 </body>
 </html>
